backend/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: docker.io/amine1002/client-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
