backend/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: microshop
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
